2009-06-23  Nick Clifton  <nickc@redhat.com>

	* dwarf.c (display_debug_lines_raw): Include the name of the
	section in warning message.
	(struct debug_display): Enable reloc processing for .debug_line
	and .debug_ranges sections.

	* readelf.c: Add --relocated-dump command line option to dump the
	relocated contents of a specified section.
	(request_dump): New function.
	(parse_args): Use it.
	(dump_section_as_bytes): Add parameter to indicate whether the
	contents should be relocated.
	(target_specific_reloc_handling): Add code for a R_MN10300_16
	reloc found after a R_MN10300_SYM_DIFF reloc.
	(debug_apply_relocations): Rename to apply_relocations.
	(get_section_contents): New function.  Replaces common code found
	in dump_section_as_strings and dump_section_as_bytes.
	* doc/binutils.texi: Document new command line option.
	* NEWS: Mention the new feature.

2009-06-22  Nick Clifton  <nickc@redhat.com>

	* readelf.c (target_specific_reloc_handling): New function:
	Processes relocs in a target specific manner.
	(debug_apply_relocations): Use the new function.
	* dwarf.c (display_debug_loc): End the dump with a blank line.
	(struct debug_display): Enable reloc processing for .debug_aranges
	and .debug_loc sections.

2009-06-19  Nick Clifton  <nickc@redhat.com>

	* ar.c (usage): Do not use #ifdef inside _("...).
	* nm.c (usage): Likewise.

2009-06-18  Nick Clifton  <nickc@redhat.com>

	PR 10288
	* objdump.c (disassemble_bytes): Set the
	USER_SPECIFIED_MACHINE_TYPE flag in the disassemble_info structure
	if the user has invoked the -m switch.
	* doc/binutils.texi: Document the additional behaviour of
	objdump's -m switch for ARM targets.

2009-06-18  Dave Korn  <dave.korn.cygwin@gmail.com>

	* configure.in: Merge cegcc and mingw32ce target name changes from
	CeGCC project.

2007-12-25  Pedro Alves  <pedro_alves@portugalmail.pt>

	* configure.in: Add arm*-*-cegcc* and arm*-*-mingw32ce* targets.
	* configure: Regenerate.

2009-06-15  Nick Clifton  <nickc@redhat.com>
